# CeresPlay

./: .gitignore  CMakeLists.txt  CalFitCostFunctor.h  CalorieFitSolution.cpp  CalorieFitSolution.h  HBCostFunctor.h  HBModelParams.h  HBSolution.cpp  HBSolution.h  LinearCostFunctor.h  LinearSolution.cpp  LinearSolution.h  LoadWDD.cpp  LoadWDD.h  Solution.cpp  Solution.h  WDDSet.cpp  WDDSet.h  WeightDataDay.h  data.txt  main.cpp  sc_data.txt
